@@ -144,7 +144,7 @@ public class TestBlackAndWhitelistValidator {
 
             StringBuilder script = new StringBuilder();
             script.append("set io.sort.mb 1000;")
-            .append("%default input 'foo';")
+            .append("%Default input 'foo';")
                     .append("A = LOAD '$input' USING mock.Storage() AS (f1:chararray,f2:int,f3:chararray);")
                     .append("B = order A by f1,f2,f3 DESC;")
                     .append("STORE B INTO 'bar' USING mock.Storage();");
@@ -162,7 +162,7 @@ public class TestBlackAndWhitelistValidator {
     @Test
     public void testPreprocessorCommand3() throws Exception {
         try {
-            ctx.getProperties().setProperty(PigConfiguration.PIG_BLACKLIST, "define");
+            ctx.getProperties().setProperty(PigConfiguration.PIG_BLACKLIST, "Define");
             PigServer pigServer = new PigServer(ctx);
             Data data = resetData(pigServer);
 
