@@ -57,6 +57,8 @@ BUG FIXES
 
 PIG-4334: PigProcessor does not set pig.datetime.default.tz (rohini)
 
+PIG-4342: Pig 0.14 cannot identify the uppercase of DECLARE and DEFAULT (daijy)
+
 Release 0.14.0
  
 INCOMPATIBLE CHANGES
